Finally fixed overflow bug

--- a/public/global.css
+++ b/public/global.css
@@ -3,7 +3,7 @@ body {
 }
 
 * {
-  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 h1,
